Finished All functions for testing